--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
     <script>
         function validatePassword() {
             const password = document.getElementById('password').value;
-            const correctPassword = 'your_password_here'; // Replace with your password
+            const correctPassword = 'Jinx07'; // Replace with your password
             if (password === correctPassword) {
                 window.location.href = 'index.html'; // Redirect to your game page
             } else {
