--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
     </style>
 </head>
 <body>
-    <h2>🔒 Welcome to Jinx 🔑</h2>
+    <h2> Welcome to Jinx </h2>
     <div class="input-container">
         <input type="password" id="password" placeholder="Enter the Magic Word">
         <br>
