--- a/login.html
+++ b/login.html
@@ -82,14 +82,14 @@
             'Wrong password, try harder, champ!',
             'Not quite right. Keep guessing!',
             'Uh-oh, no access for you! Try again.',
-            'Hmm, that’s incorrect. You’re close though!',
+            'Hmm, Bhangaar nit tak na password 😤!',
         ];
 
         function validatePassword() {
             const password = document.getElementById('password').value;
             const correctPassword = 'Jinx07'; // Replace with your password
             if (password === correctPassword) {
-                document.body.innerHTML = "<h2>Access Granted! 🎉</h2>"; // Success message
+                document.body.innerHTML = "<h2> Boom! You're in! Let the game begin! 🚀 </h2>"; // Success message
                 setTimeout(() => {
                     window.location.href = 'index.html'; // Redirect to your game page
                 }, 2000); // Wait for 2 seconds before redirecting
@@ -100,7 +100,7 @@
         }
     </script>
     <div class="footer">
-        <p>💡 Hint: Think like the creator | Need help? <a href="https://www.instagram.com/om_kangane07" target="_blank">Contact Me</a></p>
+        <p>💡 Hint: The creator has your answer | Need help? <a href="https://www.instagram.com/om_kangane07" target="_blank">Contact Me</a></p>
     </div>
 </body>
 </html>
