--- a/login.html
+++ b/login.html
@@ -102,7 +102,7 @@
 
         function validatePassword() {
             const password = document.getElementById('password').value;
-            const correctPassword = 'Bhaiya'; // Replace with your password..
+            const correctPassword = 'Hastar'; // Replace with your password..
             if (password === correctPassword) {
                 document.body.innerHTML = "<h2> Boom! You're in! Let the game begin! 🚀 </h2>"; // Success message
                 setTimeout(() => {
