--- a/multiplayer.html
+++ b/multiplayer.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jinx Realtime Multiplayer</title>
+  <title>Jinx Multiplayer Lobby</title>
   <style>
     :root {
       --primary: #6c63ff;
-      --secondary: #ffd369;
       --bg: #f5f7ff;
       --text: #24243a;
       --danger: #ff5f6d;
@@ -92,7 +91,15 @@
       list-style: none;
     }
 
-    li { padding: 6px 0; border-bottom: 1px solid #e7e8f2; }
+    li {
+      padding: 8px 0;
+      border-bottom: 1px solid #e7e8f2;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 8px;
+    }
+
     li:last-child { border-bottom: none; }
 
     .status {
@@ -103,30 +110,27 @@
       margin-top: 8px;
     }
 
-    .question {
-      margin-top: 10px;
-      font-size: 18px;
-      font-weight: 700;
-      color: #23234a;
-      min-height: 24px;
-    }
-
     .result {
       margin-top: 8px;
       font-weight: 700;
       color: #444;
+      min-height: 20px;
     }
 
-    .link-row {
-      margin-top: 12px;
-      font-size: 14px;
+    .player-name { flex: 1; }
+
+    .kick-btn {
+      background: var(--danger);
+      margin: 0;
+      padding: 6px 10px;
+      font-size: 12px;
     }
   </style>
 </head>
 <body>
   <div class="card">
-    <h1>Jinx Realtime Multiplayer (Beta)</h1>
-    <p class="small">Host creates a lobby code. Friends join from their own devices and play synchronized turns.</p>
+    <h1>Jinx Realtime Lobby</h1>
+    <p class="small">Create or join a lobby, manage players, then start and move to the game-only screen.</p>
 
     <div id="entry">
       <div class="row">
@@ -149,7 +153,7 @@
       <span id="code-badge" class="badge"></span>
       <span id="round-badge" class="badge"></span>
       <div class="status">
-        <strong>Turn:</strong> <span id="turn-text">Waiting...</span><br />
+        <strong>Status:</strong> <span id="turn-text">Waiting...</span><br />
         <strong>Host:</strong> <span id="host-text">-</span>
       </div>
 
@@ -158,18 +162,10 @@
 
       <div id="controls">
         <button id="start-btn" class="secondary hidden">Start Game</button>
-        <button id="ask-btn" class="hidden">Give Question</button>
-        <button id="flip-btn" class="hidden">Flip Coin</button>
-        <button id="next-btn" class="warning hidden">Next Turn</button>
+        <button id="go-game-btn" class="hidden">Open Game Screen</button>
       </div>
 
-      <div class="question" id="question-text"></div>
-      <div class="result" id="coin-text"></div>
       <div class="result" id="status-text"></div>
-    </div>
-
-    <div class="link-row">
-      Prefer same-device mode? <a href="index.html">Open local game</a>
     </div>
   </div>
 
@@ -190,29 +186,29 @@
     const playersList = document.getElementById('players-list');
 
     const startBtn = document.getElementById('start-btn');
-    const askBtn = document.getElementById('ask-btn');
-    const flipBtn = document.getElementById('flip-btn');
-    const nextBtn = document.getElementById('next-btn');
-
-    const questionText = document.getElementById('question-text');
-    const coinText = document.getElementById('coin-text');
+    const goGameBtn = document.getElementById('go-game-btn');
     const statusText = document.getElementById('status-text');
 
-    socket.on('connect', () => {
-      myId = socket.id;
-    });
+    function storeSession(code, playerKey) {
+      localStorage.setItem('jinxSession', JSON.stringify({ code, playerKey }));
+    }
 
-    socket.on('lobby_state', (state) => {
-      lobbyState = state;
-      render();
-    });
+    function getSession() {
+      const raw = localStorage.getItem('jinxSession');
+      if (!raw) return null;
+      try {
+        return JSON.parse(raw);
+      } catch (_error) {
+        return null;
+      }
+    }
+
+    function openGamePage() {
+      window.location.href = 'game.html';
+    }
 
     function playerById(id) {
       return (lobbyState?.players || []).find((p) => p.id === id);
-    }
-
-    function isMyTurn() {
-      return lobbyState?.turnPlayer?.id === myId;
     }
 
     function isHost() {
@@ -232,58 +228,73 @@
       hostText.textContent = host ? host.name : 'Unknown';
 
       playersList.innerHTML = '';
-      lobbyState.players.forEach((p, index) => {
+      lobbyState.players.forEach((p) => {
         const li = document.createElement('li');
         const tags = [];
         if (p.id === lobbyState.hostId) tags.push('Host');
-        if (lobbyState.turnIndex === index && lobbyState.started) tags.push('Turn');
         if (p.id === myId) tags.push('You');
-        li.textContent = `${p.name}${tags.length ? ` (${tags.join(', ')})` : ''}`;
+
+        const name = document.createElement('span');
+        name.className = 'player-name';
+        name.textContent = `${p.name}${tags.length ? ` (${tags.join(', ')})` : ''}`;
+        li.appendChild(name);
+
+        if (isHost() && !lobbyState.started && p.id !== myId) {
+          const kickBtn = document.createElement('button');
+          kickBtn.className = 'kick-btn';
+          kickBtn.textContent = 'Remove';
+          kickBtn.addEventListener('click', () => {
+            socket.emit('remove_player', { targetId: p.id });
+          });
+          li.appendChild(kickBtn);
+        }
+
         playersList.appendChild(li);
       });
 
       if (!lobbyState.started) {
         turnText.textContent = 'Waiting for host to start the game';
-        statusText.textContent = 'Lobby ready. Invite friends using the code above.';
+        statusText.textContent = 'Host can remove players before starting.';
       } else {
-        turnText.textContent = `${lobbyState.turnPlayer?.name || 'Unknown'} is playing`;
-        statusText.textContent = isMyTurn() ? 'Your move.' : 'Wait for the active player.';
+        turnText.textContent = 'Game started.';
+        statusText.textContent = 'Move to game page to continue.';
       }
 
       startBtn.classList.toggle('hidden', !(isHost() && !lobbyState.started && lobbyState.players.length >= 2));
+      goGameBtn.classList.toggle('hidden', !lobbyState.started);
 
-      askBtn.classList.toggle('hidden', !(lobbyState.started && isMyTurn() && !lobbyState.questionAsked));
-      flipBtn.classList.toggle('hidden', !(lobbyState.started && isMyTurn() && lobbyState.questionAsked && !lobbyState.coinResult));
-      nextBtn.classList.toggle('hidden', !(lobbyState.started && lobbyState.coinResult && (isMyTurn() || isHost())));
-
-      if (!lobbyState.started) {
-        questionText.textContent = '';
-        coinText.textContent = '';
-        return;
-      }
-
-      if (lobbyState.questionAsked) {
-        questionText.textContent = lobbyState.questionVisible
-          ? `Question: ${lobbyState.currentQuestion}`
-          : 'Question selected. Toss decides if it is revealed.';
-      } else {
-        questionText.textContent = '';
-      }
-
-      if (lobbyState.coinResult) {
-        if (lobbyState.coinResult === 'Heads') {
-          coinText.textContent = `Coin: Heads — Question is revealed.`;
-        } else {
-          coinText.textContent = `Coin: Tails — Question stays a mystery.`;
-        }
-      } else {
-        coinText.textContent = '';
+      if (lobbyState.started) {
+        openGamePage();
       }
     }
 
     function showError(message) {
       entryError.textContent = message || '';
     }
+
+    socket.on('connect', () => {
+      myId = socket.id;
+      const session = getSession();
+      if (session?.code && session?.playerKey) {
+        socket.emit('reconnect_lobby', session, (response) => {
+          if (!response?.ok) return;
+          lobbyState = response.state;
+          render();
+        });
+      }
+    });
+
+    socket.on('lobby_state', (state) => {
+      lobbyState = state;
+      render();
+    });
+
+    socket.on('player_removed', ({ targetId }) => {
+      if (targetId === myId) {
+        localStorage.removeItem('jinxSession');
+        window.location.reload();
+      }
+    });
 
     document.getElementById('create-btn').addEventListener('click', () => {
       const name = document.getElementById('host-name').value.trim();
@@ -293,6 +304,7 @@
           return;
         }
         showError('');
+        storeSession(response.code, response.playerKey);
         lobbyState = response.state;
         render();
       });
@@ -307,15 +319,14 @@
           return;
         }
         showError('');
+        storeSession(response.code, response.playerKey);
         lobbyState = response.state;
         render();
       });
     });
 
     startBtn.addEventListener('click', () => socket.emit('start_game'));
-    askBtn.addEventListener('click', () => socket.emit('ask_question'));
-    flipBtn.addEventListener('click', () => socket.emit('flip_coin'));
-    nextBtn.addEventListener('click', () => socket.emit('next_turn'));
+    goGameBtn.addEventListener('click', openGamePage);
   </script>
 </body>
 </html>
