Enforce answer-before-coin flow and split multiplayer into game stage

--- a/index.html
+++ b/index.html
@@ -154,9 +154,31 @@
     .players-list li {
       padding: 6px 0;
       border-bottom: 1px solid #e7e8f2;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 8px;
     }
 
     .players-list li:last-child { border-bottom: none; }
+
+    .player-name { flex: 1; }
+
+    .mini-btn {
+      border: none;
+      background: var(--danger);
+      color: #fff;
+      border-radius: 6px;
+      padding: 4px 10px;
+      font-size: 12px;
+      cursor: pointer;
+      font-weight: 700;
+    }
+
+    .button[disabled] {
+      opacity: 0.55;
+      cursor: not-allowed;
+    }
 
     .result {
       font-size: 16px;
@@ -175,6 +197,34 @@
 
     .section-actions {
       margin-top: 12px;
+    }
+
+    .game-stage {
+      margin-top: 14px;
+      padding: 14px;
+      border-radius: 12px;
+      background: #f9faff;
+      border: 1px solid #e2e6ff;
+    }
+
+    .game-stage h3 {
+      margin-bottom: 8px;
+    }
+
+    .answer-row {
+      display: grid;
+      grid-template-columns: 1fr auto;
+      gap: 8px;
+      align-items: end;
+      margin: 10px 0;
+    }
+
+    .answer-row select {
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      font-size: 15px;
+      width: 100%;
     }
 
     #modal {
@@ -328,29 +378,51 @@
       <div id="multiplayer-lobby" class="hidden">
         <span id="code-badge" class="badge"></span>
         <span id="multi-round-badge" class="badge"></span>
-        <div>
-          <button id="copy-lobby-btn" class="button secondary">Copy Lobby Code</button>
-          <button id="share-lobby-btn" class="button">Share Lobby</button>
+
+        <div id="multiplayer-waiting">
+          <div>
+            <button id="copy-lobby-btn" class="button secondary">Copy Lobby Code</button>
+            <button id="share-lobby-btn" class="button">Share Lobby</button>
+          </div>
+
+          <div class="status">
+            <strong>Turn:</strong> <span id="turn-text">Waiting...</span><br />
+            <strong>Host:</strong> <span id="host-text">-</span>
+          </div>
+
+          <h3>Players</h3>
+          <ul id="players-list" class="players-list"></ul>
+
+          <div>
+            <button id="start-btn" class="button secondary hidden">Start Game</button>
+          </div>
         </div>
 
-        <div class="status">
-          <strong>Turn:</strong> <span id="turn-text">Waiting...</span><br />
-          <strong>Host:</strong> <span id="host-text">-</span>
+        <div id="multiplayer-game" class="game-stage hidden">
+          <h3>Game Screen</h3>
+          <div class="status">
+            <strong>Turn:</strong> <span id="turn-text-game">Waiting...</span><br />
+            <strong>Host:</strong> <span id="host-text-game">-</span>
+          </div>
+
+          <div>
+            <button id="ask-btn" class="button">Give Question</button>
+            <button id="flip-btn" class="button">Flip Coin</button>
+            <button id="next-btn" class="button warning">Next Turn</button>
+          </div>
+
+          <div class="answer-row">
+            <select id="answer-player-select">
+              <option value="">Choose player name as your answer</option>
+            </select>
+            <button id="answer-btn" class="button secondary">Answer Name</button>
+          </div>
+
+          <div id="answer-text" class="result"></div>
+          <div id="question-text" class="question"></div>
+          <div id="coin-text" class="result"></div>
+          <div id="status-text" class="result"></div>
         </div>
-
-        <h3>Players</h3>
-        <ul id="players-list" class="players-list"></ul>
-
-        <div>
-          <button id="start-btn" class="button secondary hidden">Start Game</button>
-          <button id="ask-btn" class="button hidden">Give Question</button>
-          <button id="flip-btn" class="button hidden">Flip Coin</button>
-          <button id="next-btn" class="button warning hidden">Next Turn</button>
-        </div>
-
-        <div id="question-text" class="question"></div>
-        <div id="coin-text" class="result"></div>
-        <div id="status-text" class="result"></div>
       </div>
 
       <div class="section-actions">
@@ -566,6 +638,13 @@
     const statusText = document.getElementById('status-text');
     const copyLobbyBtn = document.getElementById('copy-lobby-btn');
     const shareLobbyBtn = document.getElementById('share-lobby-btn');
+    const multiplayerWaiting = document.getElementById('multiplayer-waiting');
+    const multiplayerGame = document.getElementById('multiplayer-game');
+    const turnTextGame = document.getElementById('turn-text-game');
+    const hostTextGame = document.getElementById('host-text-game');
+    const answerPlayerSelect = document.getElementById('answer-player-select');
+    const answerBtn = document.getElementById('answer-btn');
+    const answerText = document.getElementById('answer-text');
 
     function randomLobbyCode() {
       const chars = 'ABCDEFGHJKLMNPQRSTUVWXYZ23456789';
@@ -585,6 +664,26 @@
       }
       lastMultiplayerQuestion = question;
       return question;
+    }
+
+    function shuffleArray(items) {
+      const arr = [...items];
+      for (let i = arr.length - 1; i > 0; i -= 1) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [arr[i], arr[j]] = [arr[j], arr[i]];
+      }
+      return arr;
+    }
+
+    function refillTurnPool() {
+      if (!lobbyState) return;
+      lobbyState.turnPool = shuffleArray(lobbyState.players.map((player) => player.id));
+      if (!lobbyState.turnPool.length) {
+        lobbyState.turnIndex = 0;
+        return;
+      }
+      const nextId = lobbyState.turnPool.shift();
+      lobbyState.turnIndex = lobbyState.players.findIndex((p) => p.id === nextId);
     }
 
     function resetPeerState() {
@@ -621,14 +720,32 @@
       if (!lobbyState) return;
       const idx = lobbyState.players.findIndex((p) => p.id === playerId);
       if (idx === -1) return;
+
+      const wasTurnPlayer = lobbyState.players[lobbyState.turnIndex]?.id === playerId;
       lobbyState.players.splice(idx, 1);
-      if (lobbyState.turnIndex >= lobbyState.players.length) {
-        lobbyState.turnIndex = 0;
-      }
+      lobbyState.turnPool = (lobbyState.turnPool || []).filter((id) => id !== playerId);
+
       if (!lobbyState.players.length) {
         resetPeerState();
         return;
       }
+
+      if (lobbyState.hostId === playerId) {
+        lobbyState.hostId = lobbyState.players[0].id;
+      }
+
+      if (wasTurnPlayer && lobbyState.started) {
+        if (!lobbyState.turnPool || !lobbyState.turnPool.length) {
+          lobbyState.round += 1;
+          refillTurnPool();
+        } else {
+          const nextId = lobbyState.turnPool.shift();
+          lobbyState.turnIndex = lobbyState.players.findIndex((p) => p.id === nextId);
+        }
+      } else if (lobbyState.turnIndex >= lobbyState.players.length) {
+        lobbyState.turnIndex = 0;
+      }
+
       renderMultiplayer();
       broadcastLobbyState();
     }
@@ -642,12 +759,14 @@
       if (action === 'start_game') {
         if (!isHost || lobbyState.players.length < 2) return;
         lobbyState.started = true;
-        lobbyState.turnIndex = 0;
         lobbyState.round = 1;
         lobbyState.questionAsked = false;
         lobbyState.currentQuestion = '';
         lobbyState.coinResult = '';
         lobbyState.questionVisible = false;
+        lobbyState.answerByPlayerId = '';
+        lobbyState.answerByPlayerName = '';
+        refillTurnPool();
       }
 
       if (action === 'ask_question') {
@@ -656,24 +775,46 @@
         lobbyState.questionAsked = true;
         lobbyState.coinResult = '';
         lobbyState.questionVisible = false;
+        lobbyState.answerByPlayerId = '';
+        lobbyState.answerByPlayerName = '';
+      }
+
+      if (action?.type === 'answer_player') {
+        if (!lobbyState.started || !isTurn || !lobbyState.questionAsked || lobbyState.coinResult) return;
+        const targetId = String(action.targetId || '');
+        const target = lobbyState.players.find((player) => player.id === targetId);
+        if (!target) return;
+        lobbyState.answerByPlayerId = target.id;
+        lobbyState.answerByPlayerName = target.name;
       }
 
       if (action === 'flip_coin') {
-        if (!lobbyState.started || !isTurn || !lobbyState.questionAsked || lobbyState.coinResult) return;
+        if (!lobbyState.started || !isTurn || !lobbyState.questionAsked || lobbyState.coinResult || !lobbyState.answerByPlayerId) return;
         lobbyState.coinResult = Math.random() < 0.5 ? 'Heads' : 'Tails';
         lobbyState.questionVisible = lobbyState.coinResult === 'Heads';
       }
 
       if (action === 'next_turn') {
         if (!lobbyState.started || !lobbyState.coinResult || !(isTurn || isHost)) return;
-        lobbyState.turnIndex = (lobbyState.turnIndex + 1) % lobbyState.players.length;
-        if (lobbyState.turnIndex === 0) {
+        if (!lobbyState.turnPool || !lobbyState.turnPool.length) {
           lobbyState.round += 1;
+          refillTurnPool();
+        } else {
+          const nextId = lobbyState.turnPool.shift();
+          lobbyState.turnIndex = lobbyState.players.findIndex((p) => p.id === nextId);
         }
         lobbyState.questionAsked = false;
         lobbyState.currentQuestion = '';
         lobbyState.coinResult = '';
         lobbyState.questionVisible = false;
+        lobbyState.answerByPlayerId = '';
+        lobbyState.answerByPlayerName = '';
+      }
+
+      if (action?.type === 'remove_player') {
+        if (!isHost || lobbyState.started || action.targetId === lobbyState.hostId) return;
+        removePlayer(action.targetId);
+        return;
       }
 
       renderMultiplayer();
@@ -698,6 +839,7 @@
             return;
           }
           lobbyState.players.push({ id: conn.peer, name: cleanName });
+          conn.send({ type: 'state', state: lobbyState });
           renderMultiplayer();
           broadcastLobbyState();
           return;
@@ -739,7 +881,10 @@
           questionAsked: false,
           currentQuestion: '',
           coinResult: '',
-          questionVisible: false
+          questionVisible: false,
+          answerByPlayerId: '',
+          answerByPlayerName: '',
+          turnPool: []
         };
         entryError.textContent = '';
         autoServerStatus.textContent = 'Lobby created. Share code with friends.';
@@ -833,6 +978,11 @@ ${shareUrl}`);
       askBtn.addEventListener('click', () => sendAction('ask_question'));
       flipBtn.addEventListener('click', () => sendAction('flip_coin'));
       nextBtn.addEventListener('click', () => sendAction('next_turn'));
+      answerBtn.addEventListener('click', () => {
+        const targetId = answerPlayerSelect.value;
+        if (!targetId) return;
+        sendAction({ type: 'answer_player', targetId });
+      });
       copyLobbyBtn.addEventListener('click', copyLobbyCode);
       shareLobbyBtn.addEventListener('click', shareLobby);
 
@@ -845,6 +995,11 @@ ${shareUrl}`);
         const name = document.getElementById('join-name').value.trim();
         const code = document.getElementById('join-code').value.trim().toUpperCase();
         joinHostLobby(name, code);
+      });
+
+      answerPlayerSelect.addEventListener('change', () => {
+        const canAnswerNow = lobbyState && lobbyState.started && isMyTurn() && lobbyState.questionAsked && !lobbyState.coinResult;
+        answerBtn.disabled = !canAnswerNow || !answerPlayerSelect.value;
       });
     }
 
@@ -882,7 +1037,20 @@ ${shareUrl}`);
         if (p.id === lobbyState.hostId) tags.push('Host');
         if (lobbyState.started && lobbyState.turnIndex === index) tags.push('Turn');
         if (p.id === myId) tags.push('You');
-        li.textContent = `${p.name}${tags.length ? ` (${tags.join(', ')})` : ''}`;
+
+        const nameLabel = document.createElement('span');
+        nameLabel.className = 'player-name';
+        nameLabel.textContent = `${p.name}${tags.length ? ` (${tags.join(', ')})` : ''}`;
+        li.appendChild(nameLabel);
+
+        if (isHost() && !lobbyState.started && p.id !== lobbyState.hostId) {
+          const removeBtn = document.createElement('button');
+          removeBtn.className = 'mini-btn';
+          removeBtn.textContent = 'Remove';
+          removeBtn.addEventListener('click', () => sendAction({ type: 'remove_player', targetId: p.id }));
+          li.appendChild(removeBtn);
+        }
+
         playersList.appendChild(li);
       });
 
@@ -895,12 +1063,38 @@ ${shareUrl}`);
       }
 
       startBtn.classList.toggle('hidden', !(isHost() && !lobbyState.started && lobbyState.players.length >= 2));
-      askBtn.classList.toggle('hidden', !(lobbyState.started && isMyTurn() && !lobbyState.questionAsked));
-      flipBtn.classList.toggle('hidden', !(lobbyState.started && isMyTurn() && lobbyState.questionAsked && !lobbyState.coinResult));
-      nextBtn.classList.toggle('hidden', !(lobbyState.started && lobbyState.coinResult && (isMyTurn() || isHost())));
+      multiplayerWaiting.classList.toggle('hidden', lobbyState.started);
+      multiplayerGame.classList.toggle('hidden', !lobbyState.started);
+
+      const turnMessage = lobbyState.started
+        ? `${currentTurnPlayer()?.name || 'Unknown'} is playing`
+        : 'Waiting for host to start the game';
+      turnTextGame.textContent = turnMessage;
+      hostTextGame.textContent = host ? host.name : 'Unknown';
+
+      askBtn.classList.toggle('hidden', !lobbyState.started);
+      flipBtn.classList.toggle('hidden', !lobbyState.started);
+      nextBtn.classList.toggle('hidden', !lobbyState.started);
+
+      askBtn.disabled = !(lobbyState.started && isMyTurn() && !lobbyState.questionAsked);
+      const canAnswer = lobbyState.started && isMyTurn() && lobbyState.questionAsked && !lobbyState.coinResult;
+      answerPlayerSelect.disabled = !canAnswer;
+      answerBtn.disabled = !canAnswer || !answerPlayerSelect.value;
+      flipBtn.disabled = !(canAnswer && !!lobbyState.answerByPlayerId);
+      nextBtn.disabled = !(lobbyState.started && lobbyState.coinResult && (isMyTurn() || isHost()));
+
+      answerPlayerSelect.innerHTML = '<option value="">Choose player name as your answer</option>';
+      lobbyState.players.forEach((player) => {
+        const option = document.createElement('option');
+        option.value = player.id;
+        option.textContent = player.name;
+        if (player.id === lobbyState.answerByPlayerId) option.selected = true;
+        answerPlayerSelect.appendChild(option);
+      });
 
       if (!lobbyState.started) {
         questionText.textContent = '';
+        answerText.textContent = '';
         coinText.textContent = '';
         return;
       }
@@ -908,10 +1102,14 @@ ${shareUrl}`);
       if (lobbyState.questionAsked) {
         questionText.textContent = lobbyState.questionVisible
           ? `Question: ${lobbyState.currentQuestion}`
-          : 'Question selected. Toss decides if it is revealed.';
+          : 'Question selected. Answer with a player name, then toss the coin.';
       } else {
         questionText.textContent = '';
       }
+
+      answerText.textContent = lobbyState.answerByPlayerName
+        ? `Chosen answer: ${lobbyState.answerByPlayerName}`
+        : (lobbyState.questionAsked ? 'Waiting for active player to answer with a name.' : '');
 
       if (lobbyState.coinResult) {
         coinText.textContent = lobbyState.coinResult === 'Heads'
